# ege-microservices

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api_service/: Dockerfile  aerich.ini  pyproject.toml
api_service/src/: config.py  database.py  main.py  models.py
api_service/src/routes/: scores.py  users.py
api_service/src/services/: score_service.py  user_service.py
api_service/tests/: conftest.py  test_routes.py
migrations/models/: 0_20251126162903_init.py  0_20251126180340_init.py
shared/: pyproject.toml
shared/src/ege_shared/: consts.py  schemas.py
tg_bot_service/: Dockerfile  pyproject.toml
tg_bot_service/src/tg_bot/: client.py  config.py  handlers.py  keyboards.py  main.py  states.py
vk_bot_service/: Dockerfile  pyproject.toml
vk_bot_service/src/vk_bot/: client.py  config.py  keyboard.py  loader.py  main.py  states.py
vk_bot_service/src/vk_bot/handlers/: __init__.py  base.py  registration.py  scores.py
