[project]
name = "scoring-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ege-api",
    "ege-shared",
    "tg-bot-service",
    "vk-bot-service"
]

[tool.uv.sources]
ege-api = { workspace = true }
ege-shared = { workspace = true }
tg-bot-service = { workspace = true }
vk-bot-service = { workspace = true }

[tool.uv.workspace]
members = ["api_service", "shared", "tg_bot_service", "vk_bot_service"]
