[project]
name = "ege-api"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "tortoise-orm",
    "aerich",
    "asyncpg",
    "pydantic-settings",
    "tomlkit>=0.13.3",
    "ege-shared",
    "loguru>=0.7.3",
]

[tool.uv.sources.ege-shared]
workspace = true

[tool.aerich]
tortoise_orm = "api_service.src.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./src"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning"
]