[project]
name = "tg-bot-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram",
    "aiohttp",
    "pydantic-settings",
    "ege-shared",
    "loguru>=0.7.3",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_bot"]

[tool.uv.sources]
ege-shared = { workspace = true }
