[project]
name = "vk-bot-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "vkbottle",
    "aiohttp",
    "pydantic-settings",
    "ege-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vk_bot"]

[tool.uv.sources]
ege-shared = { workspace = true }